@@ -1,8 +1,6 @@
 #1 Für unsere tabellen in sql einfach zu src/sql navigieren und in mysql workbench einbinden, vorher in mysql workbench die datenbank plotarmor erstellen mit
 "create database plotarmor;"
-#2 für das ausführen verlang javafx eine konfiguration in den vm option. Klicken Sie auf Run->Edit Configuration->New -> modify options -> add vm options.
-Da fügt man nun "--module-path "PFAD ZU JAVAFX LIB" --add-modules javafx.controls,javafx.fxml"
-#3 Mysql server mit username "root" und passwort "root" einrichten.
+#2 Mysql server mit username "root" und passwort "root" einrichten.
 
 --------
 #Für das erstellen der executable file von plotarmor:
